# playground-detector-ops

./: .dockerignore  .gitignore  Dockerfile  README.md
.dvc/: config
.github/workflows/: ci.yml
frontend/: app.py
k8s/: deployment.yaml  hpa.yaml  service.yaml
models/onnx/: .gitignore  best.onnx.dvc
src/: export_onnx.py
src/cpp_inference/: CMakeLists.txt  PlaygroundDetector.hpp  main.cpp  server.cpp
src/inference/: onnx_infer.py
